--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Grant execute permission for Gradle wrapper
+        run: chmod +x ./gradlew
+
+      - name: Build JAR file with Gradle
+        run: ./gradlew build
+
+      - name: Copy JAR to project root as app.jar
+        run: cp build/libs/*.jar app.jar
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
